change vertical spacing and text to avoid scroll

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ html, body {
     font-weight: 500;
     font-size: 3.5rem;
     margin-top: 0;
-    margin-bottom: 6rem;
+    margin-bottom: 4rem;
 }
 
 .uc-p {
@@ -76,7 +76,7 @@ b {
 }
 
 .uc-buttons {
-    margin-top: 6rem;
+    margin-top: 4rem;
 }
 
 .uc-buttons>*:not(:last-child) {
